# linGAM

./: LICENSE  README.md  gamcore.py  linGAM.py  make.bat  pyproject.toml
.github/workflows/: pages.yml
docs/: Makefile  api.rst  changelog.rst  conf.py  gridsearch.rst  index.rst  make.bat  math.rst
docs/_build/: .buildinfo  .buildinfo.bak  api.html  changelog.html  constraints.html  examples.html  genindex.html  gridsearch.html  index.html  math.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/.doctrees/: api.doctree  constraints.doctree  gridsearch.doctree  index.doctree  math.doctree  quickstart.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/lingam/: _bspline.html  _gam.html  _lingam.html  _penalty.html
docs/_build/_sources/: changelog.rst.txt  constraints.rst.txt  index.rst.txt  math.rst.txt  quickstart.rst.txt
docs/_build/_static/: custom.css
docs/_build/doctrees/: api.doctree  changelog.doctree  constraints.doctree  examples.doctree  gridsearch.doctree  index.doctree  math.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  api.html  changelog.html  constraints.html  examples.html  genindex.html  gridsearch.html  index.html  math.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  changelog.doctree  constraints.doctree  index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/lingam/: _bspline.html  _formula.html  _gam.html  _lingam.html  _penalty.html  _solver.html  _terms.html
docs/_build/html/_sources/: api.rst.txt  constraints.rst.txt  examples.rst.txt  gridsearch.rst.txt  index.rst.txt
docs/_build/html/_static/: custom.css  dark.css
docs/_static/: dark.css
examples/: 01_basic_lingam.py  02_multi_term_formula.py  03_robust_fitting.py  04_shape_constraints.py  05_tensor_interaction.py  06_categorical_factors.py  07_custom_grid_search.py  08_intervals_and_diagnostics.py  09_plotting.py  10_engineering_case_study.py  EXAMPLE_10_README.md  README.md
linGAM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/linGAM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/lingam/: __init__.py  __main__.py  _bspline.py  _formula.py  _gam.py  _lingam.py  _penalty.py  _solver.py  _terms.py
